2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c:
	* libempathy/empathy-utils.c:
	* libempathy/empathy-utils.h: Adding new empathy_strdiff API stolen from
	telepathy-glib. It check if strings are != NULL before using strcmp.
	Using that API to fix bug #461886. Should be used in more places.

2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c: Click on the tray icon shows the
	window if it's not active and hide if it is. Fixes bug #462057
	(Olivier Valentin).

2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-group-chat.c: don't display
	"Topic set to: (null)". Fixes bug #460205 (Michael Scherer).

2007-07-30 Xavier Claessens  <xclaesse@gmail.com>

	* autogen.sh: Added back, it calls gnome-autogen.sh.

2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c:
	* libempathy/empathy-message.c: Add missing include string.h.

2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.11.

2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-generic.c:
	* libempathy-gtk/empathy-account-widget-generic.h: Align param names
	on the left.

	* libempathy-gtk/empathy-accounts-dialog.glade:
	* libempathy-gtk/empathy-accounts-dialog.c: Simpler header to describe
	the selected account. Fixes bug #459169.

	* configure.ac: Set Collabora Ltd. in the Copyright.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Makes easier to change to
	profile order.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.c: Try to guess the
	server from the jid only if we are using the jabber profile. When we
	guessed a server don't forget to set the "server" McAccount param,
	setting the entry's text is not enough.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>
